--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,12 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.*"
+        "php": ">=5.6",
+        "illuminate/support": ">=5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.6.*",
-        "illuminate/database": ">=5.1 <6.0",
-        "illuminate/events": ">=4.1 <6.0"
+        "illuminate/database": ">=5.1",
+        "illuminate/events": ">=4.1"
     },
     "autoload": {
         "files": [
@@ -28,6 +27,16 @@
         ],
         "psr-4": {
             "Tungltdev\\LaravelSettings\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Tungltdev\\LaravelSettings\\SettingsServiceProvider"
+            ],
+            "aliases": {
+                "Settings": "Tungltdev\\LaravelSettings\\Facades\\Settings"
+            }
         }
     }
 }
